--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,9 @@ body {
   height: calc(100% - 120px);
   width: calc(100% - 120px);
   background: #000;
-  color: #aaa;
+  color: #fff;
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 2em;
   line-height: 1.5em;
   -webkit-font-smoothing: antialiased;
@@ -27,11 +27,11 @@ body {
  */
 
 .dimmed {
-  color: #666;
+  color: #fff;
 }
 
 .normal {
-  color: #999;
+  color: #fff;
 }
 
 .bright {
@@ -66,17 +66,17 @@ body {
 
 .thin {
   font-family: Roboto, sans-serif;
-  font-weight: 100;
+  font-weight: 700;
 }
 
 .light {
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: 300;
+  font-weight: 700;
 }
 
 .regular {
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .bold {
@@ -96,12 +96,12 @@ header {
   text-transform: uppercase;
   font-size: 15px;
   font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  border-bottom: 1px solid #666;
+  font-weight: 700;
+  border-bottom: 1px solid #fff;
   line-height: 15px;
   padding-bottom: 5px;
   margin-bottom: 10px;
-  color: #999;
+  color: #fff;
 }
 
 sup {
